fix: edit title textbox overflow

--- a/src/components/edititem.scss
+++ b/src/components/edititem.scss
@@ -5,6 +5,8 @@
   flex-grow: 1;
 
   margin: 0.5em 0;
+
+  width: 100%;
 }
 
 .desc-textbox {
